DB select component brings in the necessary dependencies