@@ -1,3 +1,18 @@
+/*
+ * Copyright 2021 - 2022 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.springframework.sbm.mule.actions.javadsl.translators.db;
 
 import org.mulesoft.schema.mule.db.SelectMessageProcessorType;
@@ -9,6 +24,7 @@ import org.springframework.stereotype.Component;
 import javax.xml.namespace.QName;
 import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 @Component
 public class SelectTranslator implements MuleComponentToSpringIntegrationDslTranslator<SelectMessageProcessorType> {
@@ -23,7 +39,10 @@ public class SelectTranslator implements MuleComponentToSpringIntegrationDslTran
         return new DslSnippet("// TODO: substitute expression language with appropriate java code \n" +
                 "                .handle((p, h) -> jdbcTemplate.queryForList(\"SELECT * FROM STUDENTS LIMIT 500\"))",
                 Collections.emptySet(),
-                Collections.emptySet(),
+                Set.of(
+                        "org.springframework.boot:spring-boot-starter-jdbc:2.5.5",
+                        "org.springframework.integration:spring-integration-jdbc:5.5.4"
+                ),
                 Collections.emptySet()
         );
     }
